src/assets/css/theme.scss
:root {

}
@import '~@fortawesome/fontawesome-free/css/all.min.css';

html {
  font-size: 62.5%;
}

body {
  font-size: 14px;
  font-size: 1.4rem;
}

section {
  padding: 4rem 0;
}

#main-container {
  min-height: 100%;
  height: -webkit-fill-available;

  & > .v-sheet {
    height: 100%;
    min-height: 50rem;
  }
}

.banner {
  padding-top: 9rem;
  padding-bottom: 9rem;
}

.full-height {
  height: 100%;
}

.full-width {
  width: 100%;
}

.has-text-shadow {
  text-shadow: 1px 1px 2px rgba(0, 0 ,0 , 0.65);
}

.has-text-white {
  color: #FFF !important;
}

.has-cursor-pointer {
  cursor: pointer;
}

.has-cursor-text {
  cursor: text;
}

// .has-background-dark--gradient {
//   background: linear-gradient(180deg, #0D0F15 0%, #1A1D27 100%);
// }

.is-clickable {
  cursor: pointer;
  transition: color 0.15s ease;
}

.is-marginless {
  margin: 0;
}

.is-flipped-x {
  transform: scaleX(-1);
}

.has-space-bottom {
  margin-bottom: 1.5rem !important;
}

.has-space-bottom-2x {
  margin-bottom: 3rem !important;
}

.has-space-top {
  margin-top: 1.5rem !important;
}

.has-space-top-2x {
  margin-top: 3rem !important;
}

.has-space-right {
  margin-right: 1.5rem;
}

.has-space-left {
  margin-left: 1.5rem;
}

.has-bg-light-gray {
  background-color: #f7f6f6 !important;
}

.has-bg-white {
  background-color: #fff !important;
}

p {
  max-width: 70rem;
}

.cz-object {
  &.is-invalid {
    & > fieldset > legend {
      color: #ff5252;
    }
  }
}

.cz-fieldset {
  background-color: #fff;
  color: rgba(0,0,0,.87);
  border: thin solid rgba(0,0,0,.12);
  border-color: rgb(158, 158, 158);
  border-radius: 4px;
  padding: 1rem;
  position: relative;
  min-height: 2rem;

  &.is-invalid {
    & > legend, 
    & > fieldset > legend {
      color: #ff5252;
    }
  }

  &:hover {
    border-color: rgba(0, 0, 0, 0.6);;
  }

  & > legend {
    font-size: 16px;
    letter-spacing: .0125em;
    word-break: break-all;
    color: rgba(0, 0, 0, 0.6);
    background: #FFF;
    font-weight: normal;
    padding: 0 0.25rem;
    position: absolute;
    left: 0.5rem;
    top: 0.5rem;

    &.v-label--active {
      position: absolute;
      cursor: default;
      transform: translateY(-1.4rem) scale(1) !important;
    }

    &:not(.v-label--active) {
      width: calc(100% - 5rem);
      cursor: text;
    }
  }

  .btn-add {
    position: absolute;
    top: -0.2rem;
    right: 0;
    z-index: 1;
  }
}

.f-gap-2 {
  gap: 2rem;
}

.is-borderless {
  border: 0 !important;
}

.v-messages {
  font-size: 1rem !important;
  font-weight: 400;
  line-height: 1.5rem;
  letter-spacing: 0.03125em !important;
  font-family: "Roboto", sans-serif !important;
  margin-top: 0;

  .v-messages__message {
    line-height: 1.5rem;
  }
}

